# Gstreamer-Android-example

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/gst-build-armeabi-v7a/: gstreamer_android.c
app/src/main/java/com/gst_sdk_tutorials/tutorial_5/: Tutorial5.java
app/src/main/jni/: Android.mk
gradle/wrapper/: gradle-wrapper.properties
